tests/fixtures/invalid/pow_int_int_str.py
# Cannot call pow() with Int, Int, Str
x = pow(1, 1, "hello")
